feat: allow date updating in generic strategy
Allow updating of dates using the generic updater, by adding a
x-release-please-date or x-release-please-version-date (to update both
version and date) to a file anywhere.

The implementation is still very basic. The date is retrieved by just
checking the current date, but a better approach would be to look at the
timestamp of the previous feat/fix or breaking change for a conventional
commit, I think.

I've added an option --date-format to specify the date format. There are
no assertions with respect to this right now, and the regex matching can
be improved in several ways.

One option I considered was to try to auto-detect the date format, but I
think this is bound to be problematic because there are ambiguities in
date formatting.

Fixes #1798

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -119,6 +119,10 @@
           "description": "Customize the separator between the component and version in the GitHub tag.",
           "type": "string"
         },
+        "date-format": {
+          "description": "Date format given as a strftime expression for the generic strategy.",
+          "type": "string"
+        },
         "extra-files": {
           "description": "Specify extra generic files to replace versions.",
           "type": "array",
@@ -476,6 +480,7 @@
     "separate-pull-requests": true,
     "always-update": true,
     "tag-separator": true,
+    "date-format": true,
     "extra-files": true,
     "version-file": true,
     "snapshot-label": true,
